// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Pagination default 1`] = `
<div
  class="arco-pagination arco-pagination-size-default"
>
  <ul
    class="arco-pagination-list"
  >
    <li
      aria-label="上一页"
      class="arco-pagination-item arco-pagination-item-prev arco-pagination-item-disabled"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-left"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </li>
    <li
      aria-label="下一页"
      class="arco-pagination-item arco-pagination-item-next arco-pagination-item-disabled"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-right"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </li>
  </ul>
</div>
`;

exports[`ConfigProvider componentConfig.Pagination set className globally 1`] = `
<div
  class="arco-pagination arco-pagination-size-default global-default-class"
>
  <ul
    class="arco-pagination-list"
  >
    <li
      aria-label="上一页"
      class="arco-pagination-item arco-pagination-item-prev arco-pagination-item-disabled"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-left"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </li>
    <li
      aria-label="下一页"
      class="arco-pagination-item arco-pagination-item-next arco-pagination-item-disabled"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-right"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </li>
  </ul>
</div>
`;

exports[`ConfigProvider componentConfig.Pagination set className globally and component set className itself. 1`] = `
<div
  class="arco-pagination arco-pagination-size-default component-class"
>
  <ul
    class="arco-pagination-list"
  >
    <li
      aria-label="上一页"
      class="arco-pagination-item arco-pagination-item-prev arco-pagination-item-disabled"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-left"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M32 8.4 16.444 23.956 32 39.513"
        />
      </svg>
    </li>
    <li
      aria-label="下一页"
      class="arco-pagination-item arco-pagination-item-next arco-pagination-item-disabled"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-right"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="m16 39.513 15.556-15.557L16 8.4"
        />
      </svg>
    </li>
  </ul>
</div>
`;
